# gve_devnet_meraki_snapshot_collector

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements.txt
templates/: base.html
